--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
           </ul>
         </div>
 
+        <i class="bx bx-moon change-theme" id="theme-button"></i>
+
         <a href="#" class="button nav__button"> Subscribe </a>
       </nav>
     </header>
@@ -535,6 +537,10 @@
     </footer>
 
     <!--========== SCROLL UP ==========-->
+
+    <a href="#" class="scrollup" id="scroll-up">
+      <i class="bx bx-chevrons-up"></i>
+    </a>
 
     <!--=============== SCROLLREVEAL ===============-->
     <script src="assets/js/scrollreveal.min.js"></script>
