--- a/index.html
+++ b/index.html
@@ -442,8 +442,8 @@
             Holux <i class="bx bxs-home"></i>
           </a>
           <p class="footer__description">
-            Nuestra vision es darles a todas las personas <br />el mejor lugar
-            donde vivir.
+            Nuestra vision es darle a todas las<br />
+            personas el mejor lugar para vivir.
           </p>
         </div>
 
